--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,3 +1,9 @@
+.icon {
+  width: 30px;
+  height: 30px;
+  background: url('~/assets/images/icons.png');
+}
+
 .container {
   display: flex;
   flex-direction: column;
