--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -18,13 +18,22 @@
 .board {
   display: flex;
   flex-wrap: wrap;
-  height: 810px;
-  width: 810px;
+  height: 270px;
+  width: 270px;
   background-color: #bbb;
   border: 1px solid #000;
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background: url('~/assets/images/icons.png');
+}
+
+.border {
   display: flex;
   justify-content: center;
   align-items: center;
