--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -9,27 +9,84 @@
   width: 30px;
   height: 30px;
   justify-content: center;
-  align-items: center;
   background: url('~/assets/images/icons.png');
+  margin: 0 auto;
 }
 
-.container {
+.nikkoriTile {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 100%;
+  width: 40px;
+  background-color: #ddd;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #eee;
+  border-left: 5px solid #ccc;
+  border-bottom: 5px solid #bbb;
+}
+
+.nikkoriTile:active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 40px;
+  background-color: #ddd;
+  border-bottom: 5px solid #fff;
+  border-left: 5px solid #eee;
+  border-right: 5px solid #ccc;
+  border-top: 5px solid #bbb;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  width: 300px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddd;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #eee;
+  border-left: 5px solid #ccc;
+  border-bottom: 5px solid #bbb;
+}
+
+.containerBorder {
+  height: 280px;
+  width: 280px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddd;
+  border-bottom: 5px solid #fff;
+  border-left: 5px solid #eee;
+  border-right: 5px solid #ccc;
+  border-top: 5px solid #bbb;
+}
+
+.menuBoard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 50px;
+  width: 280px;
+  background-color: #bbb;
+  background-color: #ddd;
+  border-bottom: 5px solid #fff;
+  border-left: 5px solid #eee;
+  border-right: 5px solid #ccc;
+  border-top: 5px solid #bbb;
 }
 
 .board {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   height: 270px;
   width: 270px;
   background-color: #bbb;
-  border: 1px solid #000;
+  margin: 0 auto;
 }
 
 .flag {
@@ -58,7 +115,7 @@
   align-items: center;
   height: 11.1111%;
   width: 11.1111%;
-  border: 1px solid #000;
+  border: 1px solid #ddd;
 }
 
 .tile {
@@ -73,3 +130,15 @@
   border-left: 5px solid #ccc;
   border-bottom: 5px solid #bbb;
 }
+
+/*
+.tile:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #bbb;
+  border: 5px solid #bbb;
+}
+*/
